# kmx

./: .travis.yml  README.md  kmx.cabal  md5sums
scripts/: build-dist.sh
src/: Correlate.hs  Entropy.hs  Filter.hs  FreqCount.hi  FreqCount.hs  Hist.hs  Kmers.hs  Kmx.hs  Options.hs  Reseq.hs  Serialize.hs  Stats.hs
test/: ftest.hs  kmertest.hs  md5sums  mkhist.hs  test.sh
