Name: kmx
Version:       0.4
License:       GPL
Cabal-Version: >= 1.6
Build-Type:    Simple
Category:      Bioinformatics
Author:        Ketil Malde
Maintainer:    Ketil Malde <ketil@malde.org>
Synopsis:      K-mer counter
Description:   Parses biological sequences and counts the kmers.

Source-repository this
    Type: darcs
    Location: http://malde.org/~ketil/biohaskell/kmx
    Tag: 0.4

Executable kmx
    Main-Is:         Kmx.hs
    Hs-Source-Dirs:  src
    Other-Modules:   Correlate Entropy FreqCount Kmers Options Serialize Filter Reseq
    Build-Depends:   base >= 4 && < 5, judy == 0.2.5, vector, bytestring, time, biocore, biofastq, biofasta, cmdargs, array
    Ghc-Options: -Wall -O2
